# discord-hillbot

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  app.py  chat.py  config.py  config.yaml  conftest.py  image.py  image_generation.py  prompt_enhancers.txt  pyproject.toml  pytest.ini  requirements.txt  startup.sh  system.txt  utils.py
.github/workflows/: ci.yml
hillbot/: test_image_generation.py
hillbot/core/: config.py  config.yaml
hillbot/services/: app.py  image_generation.py
hillbot/tests/: test_image_generation.py  test_template.py
hillbot/utils/: utils.py
resources/: prompt_enhancers.txt
